--- a/docs/guides/stretch.mdx
+++ b/docs/guides/stretch.mdx
@@ -173,16 +173,16 @@ The following constraints apply when using `stretch` in Qiskit Runtime:
     Example:
 
         ```python
-        stretch a;
-        barrier $0, $1;
-        delay[100dt] $0;
-        delay[a] $1; # resolves to 26
-        x $1; # duration: 8
-        delay[a] $1; # resolves to  25
-        x $1; # duration: 8
-        delay[a] $1; # resolves to  25
-        x $1; # duration: 8
-        barrier  $0, $1;
+        a = circuit.add_stretch("a")
+        circuit.barrier(q0, q1)
+        circuit.delay(100, q0)
+        circuit.delay(a, q1)  # resolve to 26
+        circuit.x(q1)  # duration: 8
+        circuit.delay(a, q1)  # resolve to 25
+        circuit.x(q1)  # duration: 8
+        circuit.delay(a, q1)  # resolve to 25
+        circuit.x(q1)  # duration: 8
+        circuit.barrier(q0, q1)
          ```
 
     The above code resolves to a value of 25 with a remainder of 1. The first delay`[a]` will have the remainder added.
