--- a/docs/security/secure-data.mdx
+++ b/docs/security/secure-data.mdx
@@ -18,4 +18,4 @@ Deleting a service instance removes all of the content associated with that inst
 
 ## Data retention policy
 
-While you continue to use the Qiskit Runtime service, IBM will retain your data for three years. See the [Qiskit Runtime service description](https://www.ibm.com/support/customer/csol/terms/?id=BB6EE1D06BDE11EBA199CCFE56FA6D9D) for information about data retention after you stop using the service.
+IBM will retain your data for three years while you are a current user of the service.
