--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -291,6 +291,8 @@
     "\n",
     "Be aware of the following constraints when running dynamic circuits in Qiskit Runtime.  Note that as new features and improvements are added throughout the coming year, some of these limitations will be lifted.\n",
     "\n",
+    "\n",
+    "- Operands in arithmetic and bitshift operations must be resolvable at compile time. For example, `expr.add(5, 2)` is valid, but `expr.add(cr, 2)` is not because the content of `cr` (which refers to a `ClassicalRegister`) is not known until execution time.\n",
     "- Nested conditionals are not allowed. For example, the following code block will not work because it has an `if_test` inside another `if_test`:\n",
     "   <Tabs>\n",
     "    <TabItem value=\"Invalid\" label=\"Invalid\">\n",
