--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -51,7 +51,7 @@ Example of citing IBM Quantum Composer:
 
 Try choosing a different account from the account switcher in the header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
 
-## I don't see something in the user interface.
+## I don't see what I'm expecting in the user interface.
 
 Try choosing a different account from the account switcher in the header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
 
