--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -26,7 +26,7 @@ If you want access to multiple plans, you can create multiple instances and assi
 
 ## Open Plan
 
-Run your quantum circuits on the world's best QPUs for free (up to 10 minutes quantum time per 28-day rolling window). You can track your usage on the [Platform dashboard](https://quantum.cloud.ibm.com/) and the [Workloads](https://quantum.cloud.ibm.com/workloads) pages.
+Run your quantum circuits on the world's best QPUs for free (up to 10 minutes quantum time per 28-day rolling window). You can track your usage on the [Platform dashboard](https://quantum.cloud.ibm.com/) and the [Workloads](https://quantum.cloud.ibm.com/workloads) pages.  The Open Plan is only available in the us-east region.
 
 This plan is recommended for those who are learning quantum computing and exploring IBM quantum technology.
 
