--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -5,8 +5,24 @@
    "id": "4d6203af-01d0-4362-a44c-66c2128e63d1",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore bitshift */}\n",
+    "\n",
     "# Classical feedforward and control flow"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
