Remove old tutorial (#3538)
Part of #3473

--- a/docs/tutorials/repeat-until-success.ipynb
+++ b/docs/tutorials/repeat-until-success.ipynb
@@ -14,6 +14,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c175d938",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"caution\" title=\"Important\">\n",
+    "  This tutorial is no longer maintained. It is archived in GitHub for historical reference only.\n",
+    "</Admonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40eee790",
    "metadata": {},
    "source": [
