--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -5,10 +5,10 @@ description: Browse tutorials on workflows toward advantage or Qiskit capabiliti
 
 # Tutorials
 
-Use these tutorials to learn how to apply Qiskit to common quantum computing use cases. 
+Use these tutorials to learn how to apply Qiskit to common quantum computing use cases.
 
 - Start with the set of tutorials in the [Get started](#get-started) section if it is your first time running code on a quantum computer.
-- The section on [workflows toward advantage](#explore-workflows-toward-advantage) contains end-to-end examples of using a quantum computer to solve real-world problems. These tutorials focus on algorithms that are promising candidates for achieving computational advantage by a quantum computer over a classical computer. 
+- The section on [workflows toward advantage](#explore-workflows-toward-advantage) contains end-to-end examples of using a quantum computer to solve real-world problems. These tutorials focus on algorithms that are promising candidates for achieving computational advantage by a quantum computer over a classical computer.
 - The section on [Qiskit capabilities](#leverage-qiskit-capabilities) contains examples that use the latest and most advanced techniques in the Qiskit ecosystem to improve part or the whole of a particular workflow.
 
 ## Get started
@@ -27,7 +27,7 @@ Tutorials in this section cover large-scale demonstrations of quantum algorithms
 <details>
   <summary>**Verifiable sampling algorithms**</summary>
 
-The algorithms in this category focus on quantum circuits whose output distributions encode solutions to structured problems with verifiable output. Verifiability means that you can check the consistency between measured data, either through evaluating the chosen bitstring or by knowing that false positives do not occur. 
+The algorithms in this category focus on quantum circuits whose output distributions encode solutions to structured problems with verifiable output. Verifiability means that you can check the consistency between measured data, either through evaluating the chosen bitstring or by knowing that false positives do not occur.
 
 The tutorials highlight techniques where repeated sampling enables estimation of problem-specific quantities (for example, cost function values or spectral weights). These methods are particularly relevant for optimization and simulation tasks with symmetries.
 
@@ -79,7 +79,7 @@ This section introduces advanced capabilities within the Qiskit ecosystem that e
 <details>
   <summary>**Workload optimization**</summary>
 
-Workload optimization focuses on either efficient orchestration of classical and quantum resources or tailored methods for improving quantum circuit manipulation. 
+Workload optimization focuses on either efficient orchestration of classical and quantum resources or tailored methods for improving quantum circuit manipulation.
 
 * [Qiskit AI-powered transpiler service introduction](/docs/tutorials/ai-transpiler-introduction)
 
@@ -136,7 +136,7 @@ Addons enable advanced circuit manipulation, such as cutting, backpropagating ob
 <details>
   <summary>**Error mitigation**</summary>
 
-Error mitigation addresses the challenge of noise without full fault tolerance by recovering accurate expectation values through controlled circuit manipulation and post-processing. 
+Error mitigation addresses the challenge of noise without full fault tolerance by recovering accurate expectation values through controlled circuit manipulation and post-processing.
 
 * [Utility-scale error mitigation with probabilistic error amplification](/docs/tutorials/probabilistic-error-amplification)
 
@@ -154,9 +154,7 @@ Error mitigation addresses the challenge of noise without full fault tolerance b
 
 Error detection identifies faulty operations to return noise-free results shot-by-shot by post-processing.
 
-* [Repeat until success](/docs/tutorials/repeat-until-success)
-
-* [Repetition codes](/docs/tutorials/repetition-codes)
+[Repetition codes](/docs/tutorials/repetition-codes)
 
 </details>
 
