--- a/docs/guides/ha-dr.mdx
+++ b/docs/guides/ha-dr.mdx
@@ -3,6 +3,7 @@ title: Understanding high availability and disaster recovery for Qiskit Runtime
 description: Understanding high availability and disaster recovery for Qiskit Runtime
 
 ---
+{/* Most of this topic is copied from a template, so I need to keep those parts, such as the file name, topic title, section titles, formatting, intro paragraphs, and so on. */}
 
 # Understanding high availability and disaster recovery for Qiskit Runtime
 
@@ -14,8 +15,9 @@ Qiskit Runtime is a regional service that fulfills the defined [Service Level Ob
 
 ### High availability features
 
-The quantum computing service is deployed using a Multi Zone Regional deployment model.
+This service is provisioned across two zones in a multi-zone region with no single point of failure. API requests are routed through a global load balancer to the HA instance nodes, each in a different zone.
 
+If an HA instance node or zone fails, the service continues to run API requests through a global load balancer to the surviving HA instance nodes. A short delay (seconds) might occur between the outage and when the global load balancer recognizes the failure. During this time, requests might be sent to the failed instance. No noticeable degradation of service occurs during a zonal failure.
 
 It available in the following regions:
 
