--- a/docs/security/index.mdx
+++ b/docs/security/index.mdx
@@ -1,16 +1,15 @@
 ---
-title: Introduction
+title: Security and compliance introduction
 description: These topics are related to security, data handling, and compliance.
 
 ---
 
-# Introduction
+# Security and compliance introduction
 
 This section contains topics related to data handling, security, and compliance. 
 
-* Security and compliance
-    * [Use virtual private endpoints for VPC](/docs/security/virtual-private-endpoints)
-    * Securing your data
-    * Platform roles and responsibilities
-    * High availability
-    * Data retention
+* [Use virtual private endpoints for VPC](/docs/security/virtual-private-endpoints)
+* Securing your data
+* Platform roles and responsibilities
+* High availability
+* Data retention
