--- a/docs/security/index.mdx
+++ b/docs/security/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: Security and compliance introduction
+title: Security and compliance overview
 description: These topics are related to security, data handling, and compliance.
 
 ---
 
-# Security and compliance introduction
+# Security and compliance overview
 
 This section contains topics related to data handling, security, and compliance. 
 
