--- a/docs/guides/ha-dr.mdx
+++ b/docs/guides/ha-dr.mdx
@@ -17,7 +17,7 @@ Qiskit Runtime is a regional service that fulfills the defined [Service Level Ob
 
 This service is provisioned across two zones in a multi-zone region with no single point of failure. API requests are routed through a global load balancer to the HA instance nodes, each in a different zone.
 
-If an HA instance node or zone fails, the service continues to run API requests through a global load balancer to the surviving HA instance nodes. A short delay (seconds) might occur between the outage and when the global load balancer recognizes the failure. During this time, requests might be sent to the failed instance. No noticeable degradation of service occurs during a zonal failure.
+If an HA instance node or zone fails, the service continues to run API requests through to the surviving HA instance nodes.  No noticeable degradation of service occurs during a zonal failure.
 
 It available in the following regions:
 
