--- a/docs/guides/ha-dr.mdx
+++ b/docs/guides/ha-dr.mdx
@@ -7,7 +7,7 @@ description: Understanding high availability and disaster recovery for Qiskit Ru
 
 # Understanding high availability and disaster recovery for Qiskit Runtime
 
-High availability (HA) is the ability for a service to remain operational and accessible in the presence of unexpected failures. Disaster recovery is the process of recovering the service instance to a working state.
+High availability (HA) is the ability for a service to remain operational and accessible in the presence of unexpected failures. Disaster recovery is the process of recovering the service instance to a working state. Qiskit Runtime customers are not responsible for disaster recovery planning or actions.
 
 Qiskit Runtime is a regional service that fulfills the defined [Service Level Objectives (SLO)](https://cloud.ibm.com/docs/resiliency?topic=resiliency-slo) with any paid plan. For more information, see the [Service Level Agreement (SLA)](https://www.ibm.com/support/customer/csol/terms/?id=i126-9268&lc=en) for IBM Cloud&reg;. For more information about the available IBM Cloud regions and data centers for Qiskit Runtime, see [Service and infrastructure availability by location.](https://cloud.ibm.com/docs/overview?topic=overview-services_region)
 
@@ -23,12 +23,3 @@ It available in the following regions:
 
 - Washington DC (us-east)
 - Frankfurt (eu-de)
-
-## Disaster recovery architecture
-
-### Disaster recovery features
-
-| Feature | Description | Consideration |
-| -------------- | -------------- | -------------- |
-| DR Feature | Description of DR feature | Consideration information for service name |
-| DR Feature | Description of DR feature | Consideration information for service name |
