--- a/docs/guides/ha-dr.mdx
+++ b/docs/guides/ha-dr.mdx
@@ -1,7 +1,6 @@
 ---
 title: Understanding high availability and disaster recovery for Qiskit Runtime
-description: Understanding high availability and disaster recovery for Qiskit Runtime
-
+description: Learn about high availability and disaster recovery for Qiskit Runtime
 ---
 {/* Most of this topic is copied from a template, so I need to keep those parts, such as the file name, topic title, section titles, formatting, intro paragraphs, and so on. */}
 
