--- a/docs/guides/security/index.mdx
+++ b/docs/guides/security/index.mdx
@@ -12,5 +12,5 @@ This section contains topics related to data handling, security, and compliance.
     * [Use virtual private endpoints for VPC](/docs/security/virtual-private-endpoints)
     * Securing your data
     * Platform roles and responsibilities
-    * High availability
+    * [High availability](/docs/security/ha-dr)
     * Data retention
