--- a/docs/guides/measure-qubits.ipynb
+++ b/docs/guides/measure-qubits.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "<Admonition type=\"attention\" title=\"Important notes\">\n",
     "\n",
-    "* Circuits that contain operations _after_ a measurement are called dynamic circuits. Not all QPUs or simulators support these.\n",
+    "* Circuits that contain operations _after_ a measurement are called dynamic circuits. Not all QPUs support these.\n",
     "* There must be at least one classical register in order to use measurements.\n",
     "* The Sampler primitive requires circuit measurements. You can add circuit measurements with the Estimator primitive, but they are ignored.\n",
     "\n",
