Bring over new design for Support pg

--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -1,35 +1,45 @@
 ---
 title: Support
-description: How to find answers to questions or problems you encounter while using IBM Quantum (Platform, or on IBM Cloud) or Qiskit Runtime
-
+description: How to find answers to questions or problems you encounter while using IBM Quantum Platform or Qiskit Runtime
 ---
 # Support
 
-## Get help with Qiskit and IBM Quantum Platform
+## Get help with IBM Quantum Platform and Qiskit
 
-<Admonition type="caution" title="Having trouble logging in?">
+**Premium Plan, On-Prem Plan, Direct Access, Flex Plan, Pay-As-You-Go Plan, special programs, and Open Plan (expect for Trial account):**
 
-If you get an error when you create an IBM Cloud&reg; account, first check whether you have access to the [Support center.](https://cloud.ibm.com/unifiedsupport/supportcenter)
+All support inquiries must be submitted by [creating a case in the IBM Cloud® Support Center](https://cloud.ibm.com/unifiedsupport/cases/form) and selecting 'Qiskit Runtime' in the Topic field. Ensure you have selected the appropriate IBM Cloud account (your institutional cloud account or any non-trial account) in the account switcher.
 
-- If you do have access, click "create case", then select *Account* as the Topic and *Account verification* as the Subtopic.
-- If you do not have access, contact Support by calling 1-866-325-0045 and selecting the third option.
+Please reach out for any technical matter, including platform issues, job errors, Qiskit guidance, or broader quantum computing questions. Our team includes technical experts ready to assist across this full range of topics.
 
-See [Why is my account inactive?](https://cloud.ibm.com/docs/account?topic=account-ts_accnt_inactive) and [Why does a resource group error occur after reactivation or upgrade of a suspended account?](https://cloud.ibm.com/docs/account?topic=account-resource_inactive) for more information.
+**Community support:**
 
+Have a Trial account or looking for other support options?  Join the Qiskit Slack community to get help from our large community of users and experts. In Slack you will find topical channels such as #qiskit-runtime, #ibm-quantum-platform, #qiskit-transpiler, #qiskit-ecosystem, and many more.
+
+You can also user [Stack Exchange](https://quantumcomputing.stackexchange.com/?tags=qiskit) for support from the wider community about quantum computing and programming-related questions.
+
+## Having trouble creating an account or logging in?
+
+If you get an error when you create an IBM Cloud&reg; account, first check whether you have access to the [Support Center.](https://cloud.ibm.com/unifiedsupport/cases/form)
+
+- If you have access, click "create case", then select *Account* as the Topic and *Account verification* as the Subtopic.
+- If you do not have access, open a case [using this link.](https://watson.service-now.com/x_ibmwc_open_case_app.do#!/create)
+
+If you are getting an error while trying to create an account and your country is on [this list,](https://cloud.ibm.com/docs/account?topic=account-account-getting-started#signup-personalaccts) explore the following options:
+
+1. You can use [Documentation](/docs) and [Learning](/learning) resources without an account
+2. Create a [SkillsBuild account](https://www.ibm.com/academic/) if you are a university student
+3. [Create a trial account](https://quantum.cloud.ibm.com/registration) for 30 days of free access (Note that you will likely lose access at the end of the trial)
+
+<Admonition type="note">
+If you are the **owner** of a Pay-As-You-Go or Subscription account, you need to create an IBM Cloud account and provide billing information for verification.
+
+If you are **invited to join** an account, simply accept the email invitation and follow the provided steps to gain access without providing billing information.
+
+**Trial account owners** can create an Open Plan instance for 30 days without providing billing information. At the end of the trial, users must provide billing information to verify and continue using their account. User will *not be charged* if they continue using the free Open Plan, but can choose to upgrade to other Pay-As-You-Go Plans at that time.
+
+For more information about IBM Cloud accounts, visit the [IBM Cloud account FAQs](https://cloud.ibm.com/docs/account?topic=account-accountfaqs) page.
 </Admonition>
-
-| | |
-| --- | --- |
-| IBM Quantum&reg; Network members  | Reach out to IBM Quantum Support if you have technical difficulties, questions, or concerns. The primary way to contact support is through the IBM Cloud® Support Center by creating a case in the [Support Center](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' in the Topic field. If you previously contacted support via email, you may continue to do so during Early Access to the new IBM Quantum Platform. If unsure, ask your administrator or IBM representative for IBM Quantum Support contact details. |
-| Standard (Pay-as-you-go) Plan users  | Create a case in the [Support Center](https://cloud.ibm.com/unifiedsupport/cases/form), and choose 'Qiskit Runtime' in the Topic field. |
-| Open Plan users | Access the [Qiskit Slack](https://qisk.it/join-slack) community, where you will find topical channels such as `#qiskit-runtime`, `#ibm-quantum-platform`, `#qiskit-transpiler`, `#qiskit-ecosystem`, and more.  |
-
-## Discuss and ask questions
-
-| | |
-| --- | --- |
-| Discussions on quantum information science and development with the larger quantum computing field | Visit [Quantum Computing Stack Exchange](https://quantumcomputing.stackexchange.com/questions/) site. Be sure to read the ["How do I ask a good question?"](https://quantumcomputing.stackexchange.com/help/how-to-ask) guide, and make use of tags such as `qiskit`, `ibm-runtime`, and `ibm-quantum-services` for best results.|
-| Questions specific to programming |Visit [Stack Overflow](https://stackoverflow.com/) and use the tag `qiskit`.|
 
 ## Frequently asked questions
 
