--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -70,7 +70,7 @@ No. You can use either region.  The region determines where jobs are run and whe
 
 ## What is the data retention policy?
 
-IBM retains your job and usage data for three years while you continue to use the Qiskit Runtime service. 
+IBM retains your (undeleted) job and usage data for three years while you continue to use the Qiskit Runtime service.
 
 ## What happened to Python distributions such as Qiskit Aer, Qiskit Nature, and Qiskit Experiments?
 
