--- a/docs/security/ha-dr.mdx
+++ b/docs/security/ha-dr.mdx
@@ -14,7 +14,7 @@ Qiskit Runtime is a regional service that fulfills the defined [Service Level Ob
 
 ### High availability features
 
-This service is provisioned across two zones in a multi-zone region with no single point of failure. API requests are routed through a global load balancer to the HA instance nodes, each in a different zone.
+This service is provisioned across two zones in a multi-zone region with no single point of failure. API requests are routed through a load balancer to the HA instance nodes, each in a different zone.
 
 If an HA instance node or zone fails, the service continues to run API requests through to the surviving HA instance nodes.  No noticeable degradation of service occurs during a zonal failure.
 
