--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -36,7 +36,7 @@ If you are the **owner** of a Pay-As-You-Go or Subscription account, you need to
 
 If you are **invited to join** an account, simply accept the email invitation and follow the provided steps to gain access without providing billing information.
 
-**Trial account owners** can create an Open Plan instance for 30 days without providing billing information. At the end of the trial, users must provide billing information to verify and continue using their account. User will *not be charged* if they continue using the free Open Plan, but can choose to upgrade to other Pay-As-You-Go Plans at that time.
+**Trial account owners** can create an Open Plan instance for 30 days without providing billing information. At the end of the trial, users must provide billing information to verify and continue using their account. User will *not be charged* if they continue using the free Open Plan, but can choose to upgrade to other paid plans at that time.
 
 For more information about IBM Cloud accounts, visit the [IBM Cloud account FAQs](https://cloud.ibm.com/docs/account?topic=account-accountfaqs) page.
 </Admonition>
