add slack shortcut link

--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -14,7 +14,7 @@ Please reach out for any technical matter, including platform issues, job errors
 
 **Community support:**
 
-Have a Trial account or looking for other support options?  Join the Qiskit Slack community to get help from our large community of users and experts. In Slack you will find topical channels such as #qiskit-runtime, #ibm-quantum-platform, #qiskit-transpiler, #qiskit-ecosystem, and many more.
+Have a Trial account or looking for other support options?  [Join the Qiskit Slack community](https://qisk.it/join-slack) to get help from our large community of users and experts. In Slack you will find topical channels such as #qiskit-runtime, #ibm-quantum-platform, #qiskit-transpiler, #qiskit-ecosystem, and many more.
 
 You can also user [Stack Exchange](https://quantumcomputing.stackexchange.com/?tags=qiskit) for support from the wider community about quantum computing and programming-related questions.
 
