--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -188,10 +188,10 @@ generation_kwargs = {
 raw_pred = model(input, **generation_kwargs)["choices"][0]["text"]
 ```
 
-### Using the `llama.cpp` library
+### Use the `llama.cpp` library
 
-Another alternative is use `llama.cpp`, an open-source library that enables users to perform LLM inference on CPU with minimal setup.
-It gives you low-level control over the model execution and tipically it's run from the command line, pointing it to a local GGUF model file.
+Another alternative is to use `llama.cpp`, an open-source library for performing LLM inference on a CPU with minimal setup.
+It provides low-level control over the model execution and is typically run from the command line, pointing to a local GGUF model file.
 
 There are several ways you can use to install `llama.cpp` in your machine:
 
