--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -193,10 +193,10 @@ raw_pred = model(input, **generation_kwargs)["choices"][0]["text"]
 Another alternative is to use `llama.cpp`, an open-source library for performing LLM inference on a CPU with minimal setup.
 It provides low-level control over the model execution and is typically run from the command line, pointing to a local GGUF model file.
 
-There are several ways you can use to install `llama.cpp` in your machine:
+There are several ways to install `llama.cpp` on your machine:
 
-- Install llama.cpp using [brew, nix or winget](https://github.com/ggml-org/llama.cpp/blob/master/docs/install.md)
-- Run with Docker: Check out the [Docker documentation by `llama.cpp` team.](https://github.com/ggml-org/llama.cpp/blob/master/docs/docker.md)
+- Install llama.cpp using [brew, nix, or winget](https://github.com/ggml-org/llama.cpp/blob/master/docs/install.md)
+- Run with Docker: See out the [Docker documentation by `llama.cpp` team](https://github.com/ggml-org/llama.cpp/blob/master/docs/docker.md)
 - Download pre-built binaries from the [releases page](https://github.com/ggml-org/llama.cpp/releases)
 - Build from source by [cloning this repository](https://github.com/ggml-org/llama.cpp/blob/master/docs/build.md)
 
