--- a/docs/guides/qiskit-code-assistant-local.mdx
+++ b/docs/guides/qiskit-code-assistant-local.mdx
@@ -200,7 +200,7 @@ There are several ways to install `llama.cpp` on your machine:
 - Download pre-built binaries from the [releases page](https://github.com/ggml-org/llama.cpp/releases)
 - Build from source by [cloning this repository](https://github.com/ggml-org/llama.cpp/blob/master/docs/build.md)
 
-Once installed you can use `llama.cpp` to interact with GGUF models in conversation mode in the following way:
+Once installed, you can use `llama.cpp` to interact with GGUF models in conversation mode as follows:
 ```bash
 # Use a local model file
 llama-cli -m my_model.gguf -cnv
