Update faq to include data retention policy (#3529)
Closes #3511

--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -68,6 +68,10 @@ There's no difference.  The terms API key and API token are used interchangeably
 
 No. You can use either region.  The region determines where jobs are run and where the data is kept.  Additionally, you can only see and use instances that were created in the instance that you are logged in to. Note that only the us-east region supports the Open Plan.
 
+## What is the data retention policy?
+
+IBM retains your (undeleted) job and usage data for three years while you continue to use the Qiskit Runtime service.
+
 ## What happened to Python distributions such as Qiskit Aer, Qiskit Nature, and Qiskit Experiments?
 
 Since the release of the Qiskit SDK v1.0, the command `pip install qiskit` will **only** install the [Qiskit SDK](https://github.com/Qiskit/qiskit). This means that some modules that you have used in the past, such as `qiskit-aer` or `qiskit-nature`, now have to be installed separately.
