--- a/docs/support/execution-modes-faq.mdx
+++ b/docs/support/execution-modes-faq.mdx
@@ -26,7 +26,7 @@ The number of jobs running in parallel is based on the degree of parallelism con
     How is usage reported for failed or canceled jobs?
   </summary>
 
-See the [Failed and canceled jobs](estimate-job-run-time#failed-job) section on the Execution modes page.
+See the [Failed and canceled jobs](/docs/guides/estimate-job-run-time#failed-job) section on the Execution modes page.
 </details>
 
 ## Sessions
@@ -68,7 +68,7 @@ Yes. This reduces unwanted cost if a user forgets to close their session.
     Can I change the interactive TTL or the maximum TTL of a session?
   </summary>
 
-You cannot change the interactive TTL value. You can change the maximum TTL value of a session (see [Specify the session length](run-jobs-session#specify-length)), but it must be less than the system-defined maximum. Ask your administrator to contact IBM support if you need a different interactive TTL or system maximum TTL.
+You cannot change the interactive TTL value. You can change the maximum TTL value of a session (see [Specify the session length](/docs/guides/run-jobs-session#specify-length)), but it must be less than the system-defined maximum. Ask your administrator to contact IBM support if you need a different interactive TTL or system maximum TTL.
 
 </details>
 
@@ -145,7 +145,7 @@ In general, if your each of your jobs consumes less than a minute of QPU time, c
     How many jobs I can submit in a batch?
   </summary>
 
-While there are no limits to the number of jobs you can submit in a batch, there is a maximum time associated with a batch. That is, when a batch's wall clock time (which starts when the first batch job starts running) exceeds the system-defined maximum time, the batch will not accept any new jobs, and any jobs queued but not running are canceled. Additionally, there are limits on how much usage your jobs can consume based on your plan. To determine the maximum time associated with a batch, use the [`batch.details()`  method](run-jobs-batch#batch-details) and look for the `max_time` value.
+While there are no limits to the number of jobs you can submit in a batch, there is a maximum time associated with a batch. That is, when a batch's wall clock time (which starts when the first batch job starts running) exceeds the system-defined maximum time, the batch will not accept any new jobs, and any jobs queued but not running are canceled. Additionally, there are limits on how much usage your jobs can consume based on your plan. To determine the maximum time associated with a batch, use the [`batch.details()`  method](/docs/guides/run-jobs-batch#batch-details) and look for the `max_time` value.
 </details>
 
 <details>
