--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -293,7 +293,7 @@
     "\n",
     "Be aware of the following constraints when running dynamic circuits in Qiskit Runtime.  Note that as new features and improvements are added throughout the coming year, some of these limitations will be lifted.\n",
     "\n",
-    "- There is a limit of 2400 broadcasted bits in a job (not a circuit). Note that multiple `if` statements that operate on the same classic register is considered one broadcast.  For example, the following code broadcasts three bits:\n",
+    "- There is a limit of 2400 broadcasted bits in a job (not a circuit). Note that multiple `if` statements that operate on the same classical register are considered one broadcast.  For example, the following code broadcasts three bits:\n",
     "   ```python\n",
     "   bit[32] c;\n",
     "\n",
