implement more comments

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -5,8 +5,6 @@
    "id": "4d6203af-01d0-4362-a44c-66c2128e63d1",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore bitshift */}\n",
-    "\n",
     "# Classical feedforward and control flow"
    ]
   },
@@ -44,7 +42,7 @@
     "\n",
     "These improvements brought by dynamic circuits, however, come with trade-offs. Mid-circuit measurements and classical operations typically have longer execution time than two-qubit gates, and this increase in time might negate the benefits of reduced circuit depth. Therefore, reducing the length of mid-circuit measurement is a focus area of improvement as IBM Quantum rolls out the [new version](/announcements/product-updates/2025-03-03-new-version-dynamic-circuits) of dynamic circuits.\n",
     "\n",
-    "The [OpenQASM3 specification](https://openqasm.com/language/classical.html#looping-and-branching) defines a number of conditional instructions, but Qiskit Runtime currently only supports the [if_test](/docs/api/qiskit/qiskit.circuit.QuantumCircuit#if_test) statement, which can be used as a method on [QuantumCircuit.](/docs/api/qiskit/qiskit.circuit.QuantumCircuit) This methods returns a [context manager](https://docs.python.org/3/reference/datamodel.html#with-statement-context-managers) and is typically used in a `with` statement. This guide describes how to use this conditional statement."
+    "The [OpenQASM 3 specification](https://openqasm.com/language/classical.html#looping-and-branching) defines a number of control-flow structures, but Qiskit Runtime currently only supports the conditional `if` statement. In Qiskit SDK, this corresponds to the [if_test](/docs/api/qiskit/qiskit.circuit.QuantumCircuit#if_test) method on [QuantumCircuit.](/docs/api/qiskit/qiskit.circuit.QuantumCircuit) This method returns a [context manager](https://docs.python.org/3/reference/datamodel.html#with-statement-context-managers) and is typically used in a `with` statement. This guide describes how to use this conditional statement."
    ]
   },
   {
@@ -195,7 +193,7 @@
    "source": [
     "## Classical expressions\n",
     "\n",
-    "The Qiskit classical expression module [`qiskit.circuit.classical`](/docs/api/qiskit/circuit_classical) contains an exploratory representation of runtime operations on classical values during circuit execution. Currently, only simple expressions on bits and registers that result in a Boolean value are supported, and these are only valid for use in the condition of `QuantumCircuit.if_test()` (`IfElseOp`).\n",
+    "The Qiskit classical expression module [`qiskit.circuit.classical`](/docs/api/qiskit/circuit_classical) contains an exploratory representation of runtime operations on classical values during circuit execution. Due to hardware limitations, only `QuantumCircuit.if_test()`  conditions are currently supported.\n",
     "\n",
     "The following example shows you can use the calculation of the parity to create an n-qubit GHZ state using dynamic circuits. First, generate $n/2$ Bell pairs on\n",
     "adjacent qubits. Then, glue these pairs together using a layer of CNOT gates in between pairs. You then measure the target qubit of all prior CNOT gates and reset each measured qubit to the state $\\vert 0 \\rangle$. You apply $X$ to every unmeasured site for which the parity of all preceding bits is odd. Finally, CNOT gates are applied to the measured qubits to re-establish the entanglement lost in the measurement.\n",
@@ -296,15 +294,16 @@
     "- There is a limit of 2400 broadcasted bits in a job (not a circuit). Note that multiple `if` statements that operate on the same classical register are considered one broadcast.  For example, the following code broadcasts three bits:\n",
     "   ```python\n",
     "   bit[32] c;\n",
+    "   \n",
+    "   c[0] = measure $0;\n",
+    "   c[1] = measure $1;\n",
+    "   c[2] = measure $2;\n",
     "\n",
     "   if (c < 4) ...\n",
     "   if (c < 5) ...\n",
     "\n",
-    "   c[0] = measure $0;\n",
-    "   c[1] = measure $1;\n",
-    "   c[2] = measure $2;\n",
     "   ```\n",
-    "- Operands in arithmetic and bitshift operations must be resolvable at compile time. For example, `expr.add(5, 2)` is valid, but `expr.add(cr, 2)` is not because the content of `cr` (which refers to a `ClassicalRegister`) is not known until execution time.\n",
+    "- Operands in arithmetic and bit shift operations must be resolvable at compile time. For example, `expr.add(5, 2)` is valid, but `expr.add(cr, 2)` is not because the content of `cr` (which refers to a `ClassicalRegister`) is not known until execution time.\n",
     "- Nested conditionals are not allowed. For example, the following code block will not work because it has an `if_test` inside another `if_test`:\n",
     "   <Tabs>\n",
     "    <TabItem value=\"Invalid\" label=\"Invalid\">\n",
@@ -359,25 +358,44 @@
     "    </Tabs>\n",
     "\n",
     "\n",
-    "      - There is a 60-bit limit on the number of total broadcasted bits in a circuit. A bit is broadcasted if it's used in an `if_test` statement.\n",
+    "      -  Qiskit Runtime cannot _broadcast_ (a bit is broadcasted if it's used in an `if_test` statement) more than 60 bits at a time. You can explicitly ensure that you are working with different broadcasts by adding barriers. \n",
     "\n",
-    "         For example, the following code block does not work because it contains 100 broadcasted bits:\n",
+    "   <Tabs>\n",
+    "    <TabItem value=\"Invalid\" label=\"Invalid\">\n",
+    "        The following code block does not work because it contains 64 broadcasted bits:\n",
     "            ```python\n",
-    "               cr1 = ClassicalRegister(50)\n",
-    "               cr2 = ClassicalRegister(50)\n",
+    "               cr1 = ClassicalRegister(32)\n",
+    "               cr2 = ClassicalRegister(32)\n",
     "               qr = QuantumRegister(100)\n",
     "               circuit = QuantumCircuit(qr, cr1, cr2)\n",
     "               ...\n",
-    "               circ.measure(qr[0:50], cr1)\n",
-    "               circ.measure(qr[50:], cr2)\n",
-    "               with circ.if_test((cr1, 32)):  # 50 bits are broadcasted here\n",
+    "               circ.measure(qr[0:32], cr1)\n",
+    "               circ.measure(qr[32:], cr2)\n",
+    "               with circ.if_test((cr1, 32)):  # 32 bits are broadcasted here\n",
     "               ...\n",
-    "               with circ.if_test((cr2, 32)):  # Another 50 bits are broadcasted here, exceeding the limit!\n",
+    "               with circ.if_test((cr2, 32)):  # Another 32 bits are broadcasted here, exceeding the limit!\n",
     "                  ...\n",
     "            ```\n",
+    "     </TabItem>\n",
+    "     <TabItem value=\"Valid\" label=\"Valid\">\n",
+    "        ```python\n",
+    "         cr1 = ClassicalRegister(32)\n",
+    "         cr2 = ClassicalRegister(32)\n",
+    "         qr = QuantumRegister(100)\n",
+    "          ...\n",
+    "         circ.measure(qr[0:32], cr1)\n",
+    "         with circ.if_test((cr1, 32)):\n",
+    "             ...\n",
+    "         circ.barrier()\n",
+    "         circ.measure(qr[32:], cr2)\n",
+    "         with circ.if_test((cr2, 32)):\n",
+    "             ...\n",
+    "        ```\n",
+    "     </TabItem>\n",
+    "    </Tabs>\n",
     "\n",
     "- See [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations) for other limitations that might impact your program.\n",
-    "- See the [QASM3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime."
+    "- See the [QASM 3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime."
    ]
   },
   {
