--- a/docs/guides/logging.mdx
+++ b/docs/guides/logging.mdx
@@ -1,16 +1,15 @@
 ---
 title: Logging for Qiskit Runtime
 description: Information about IBM Quantum on IBM Cloud logging
-platform: cloud
 ---
 
 # Logging for Qiskit Runtime
 
 IBM Cloud&reg; services, such as Qiskit Runtime, generate platform logs that you can use to investigate abnormal activity and critical actions in your account, and troubleshoot problems.
 
-You can use IBM Cloud Logs Routing, which is a platform service, to route platform logs in your account to a destination of your choice by configuring a tenant that defines where platform logs are sent. For more information, see [About Logs Routing.](https://cloud.ibm.com/docs/logs-router?topic=logs-router-about)
+You can use [IBM Cloud Logs Routing,](https://cloud.ibm.com/docs/logs-router?topic=logs-router-about) which is a platform service, to route platform logs in your account to a destination of your choice by configuring a tenant that defines where platform logs are sent. For more information, see [About Logs Routing.](https://cloud.ibm.com/docs/logs-router?topic=logs-router-about)
 
-You can use IBM Cloud Logs to visualize and alert on platform logs that are generated in your account and routed by IBM Cloud Logs Routing to an IBM Cloud Logs instance.
+You can use [IBM Cloud Logs](https://cloud.ibm.com/docs/cloud-logs) to visualize and alert on platform logs that are generated in your account and routed by IBM Cloud Logs Routing to an IBM Cloud Logs instance.
 
 ## Locations where platform logs are generated
 
