--- a/docs/support/faq.mdx
+++ b/docs/support/faq.mdx
@@ -1,9 +1,9 @@
 ---
-title: Frequently asked questions (FAQ)
-description: Frequently asked questions about IBM Quantum (Platform, or on IBM Cloud) or Qiskit Runtime
+title: Frequently-asked questions (FAQ)
+description: Frequently-asked questions about IBM Quantum (Platform, or on IBM Cloud) or Qiskit Runtime
 
 ---
-# Frequently asked questions (FAQ)
+# Frequently-asked questions (FAQ)
 
 For FAQs specific to the execution modes, see the [Qiskit Runtime execution modes FAQ](/docs/support/execution-modes-faq) guide.
 
